--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "influx_node_ed2",
   "version": "1.0.0",
-  "main": "test.js",
+  "main": "testing.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
