--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,5 @@
-# compose.yaml
+networks:
+  monitoring:
 services:
   influxdb2:
     image: influxdb:latest
@@ -9,7 +10,7 @@ services:
       DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influxdb2-admin-username
       DOCKER_INFLUXDB_INIT_PASSWORD_FILE: /run/secrets/influxdb2-admin-password 
       DOCKER_INFLUXDB_INIT_ADMIN_TOKEN_FILE: /run/secrets/influxdb2-admin-token
-      DOCKER_INFLUXDB_INIT_ORG: FloodSense 
+      DOCKER_INFLUXDB_INIT_ORG: floodsense 
       DOCKER_INFLUXDB_INIT_BUCKET: First
     secrets:
       - influxdb2-admin-username
@@ -22,6 +23,20 @@ services:
       - type: volume
         source: influxdb2-config
         target: /etc/influxdb2
+    networks:
+      - monitoring
+
+  grafana:
+    depends_on:
+      - influxdb2
+    image: grafana/grafana
+    ports:
+      - 3000:3000
+
+    networks:
+      - monitoring
+    links:
+      - influxdb2  # Ensure Grafana links to influxdb2
 secrets:
   influxdb2-admin-username:
     file: .env.influxdb2-admin-username
