--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .env.influxdb2-admin-username
 .env.influxdb2-admin-password
 .env.influxdb2-admin-token
+key.pem
+cert.pem
+certs/cert.pem
+certs/key.pem
