--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.35.0",
     "@influxdata/influxdb-client-apis": "^1.35.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "https": "^1.0.0"
   }
 }
